# compilerProject

./: CMakeLists.txt
Instruction/headerFiles/: instruction.h
Instruction/src/: instruction.c
container/headerFiles/: container.h
container/src/: container.c
dotGraph/headerFiles/: dotGraph.h
dotGraph/src/: dotGraph.c
hashTable/headerFiles/: hashTable.h  keyString.h  valueInt.h
hashTable/src/: hashTable.c  keyString.c  valueInt.c
headerFiles/: ioFunc.h  ioVar.h  lexer.h  symTable.h
headerFiles/Parser/: assign.h  compFunc.h  designator.h  expFunc.h  facFunc.h  formalParam.h  funcBody.h  funcCall.h  funcDecl.h  identFunc.h  if.h  numFunc.h  reOp.h  relation.h  return.h  stat.h  statSeq.h  termFunc.h  typeDeclFunc.h  varDecFunc.h  while.h
oldCode/: blocks.c  blocks.h  hashTable.c  hashTable.h
src/: io.c  lexer.c  main.c  symTable.c
src/Parser/: assign.c  comp.c  designator.c  exp.c  fac.c  formalParam.c  funcBody.c  funcCall.c  funcDecl.c  ident.c  if.c  num.c  reOp.c  relation.c  return.c  stat.c  statSeq.c  term.c  typeDecl.c  varDecl.c  while.c
src/SSA/SSA_Arrays/headerFiles/: arrays.h  kills.h
src/SSA/SSA_Arrays/src/: arrays.c  kills.c
src/SSA/SSA_ComSubExp/headerFiles/: ssaComSubExp.h
src/SSA/SSA_ComSubExp/src/: ssaComSubExp.c
src/SSA/SSA_Instruction/headerFiles/: ssaInstr.h  ssaInstrRename.h
src/SSA/SSA_Instruction/src/: ssaInstr.c  ssaInstrRename.c
src/SSA/SSA_Phi_Instr/headerFiles/: ssaPhi.h
src/SSA/SSA_Phi_Instr/src/: ssaPhi.c
tests/: arraysTest.c  containerTest.c  dotGraph_Test.c  hashTableTest.c  hashTest.c  instrTest.c  ssaComSubTest.c  ssaInstr_Test.c  ssaRenameTest.c  symTableTest.c  testSSAPhi.c
